    latest JGraph.
  * Altered how text is positioned with respect to the graphs upon export to PNG, JPG and print jobs.  The text
    should now appear above the graph without writing over the top of it.
  * Save files are now saved to a temporary file first and then copied to the final specified file name. If there is
    an editor crash whilst saving, only the temporary file will be corrupted.

Version 1.4.3 (25/08/2006) "Deltapoint"
  * There is now a new palette menu item allowing users to drag the visible window of a 
    net around.
  * Fixed a couple of bugs that stopped the "Label Element" dialog from ensuring that 
    the label text field had focus when the dialog appears.
  * Fixed a bug where the alignment toolbar buttons were retaining focus instead of
    passing focus back to a net after an element alignment within that net.
  * Fixed a bug where, if a task already had a label, but later had a decomposition
    specfied for it, the decomposition label was overwriting the task label.
  * Fixed a bug where no engine connection would cause the Task decomposition dialog 
    some time to appear.
  * Enhanced zoom behaviour so that an editor save file will now be reloaded with the
    same zoom and position within a net as it was saved.
  * The editor has been upgraded to now use Jgraph 5.9.2.
  * Now, individual nets can have differing background colours. A new menu item on the
    net menu allows a particular net to have a background colour other than the default.
  * Fixed a bug where the Parameter Update dialog required the user to press one of the
    XQuery generating buttons before the done button for the dialog would be enabled.
  * Fixed a bug where selection of new variables for manipulation in a multiple-instance
    task would leave XQueries around for the old variables.
  * Small change to how the Task Variable update dialog decides whether a variable name is